Major enhancements to the reading list. Better HTML organization, fixed row height with hidden overflows, CSS cleanups, a little more space and a better balance between before/after row spacing.
MUCH MORE COMFORTABLE reading experience: serif font, better paragraph spacing and line-height, more space between images and next paragraph (equilibrium between before/after margins), H1 dedicated styles, and other minor enhancements.

--- a/oneflow/core/static/sass/_home.scss
+++ b/oneflow/core/static/sass/_home.scss
@@ -194,7 +194,7 @@ header {
     /* cancel Bootstrap's media margin. */
     margin-top: 0;
 
-    margin-bottom: 5px;
+    padding-bottom: 5px;
     font-weight: 300;
 
     .is_unread {
@@ -202,9 +202,13 @@ header {
     }
 
     .actions {
-        font-size: 300%;
+        position: relative;
+        top: 0;
+        right: 0;
+        z-index: 20;
+
+        font-size: 20px;
         line-height: 100%;
-        padding-right: 10px;
 
         a {
             margin-left: 10px;
@@ -249,25 +253,61 @@ header {
     .article {
         border-bottom: 1px dotted #ddd;
 
-        .meta {
+        .article-meta {
             .meta {
-                margin-left: 20px;
+                max-height: 20px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+
+                margin-bottom: 5px;
+
+                .meta {
+                    margin-left: 20px;
+                }
             }
         }
     }
 
+    .article-meta {
+
+        .article-title {
+            position: relative;
+            top: 0;
+            left: 0;
+            z-index: 10;
+
+            overflow: hidden;
+            text-overflow: ellipsis;
+            vertical-align: top;
+            width: auto;
+        }
+    }
+
     .article-content {
-        padding: 20px 14.8936% 20px 7.445%;
+        font-family: georgia, times, serif;
         text-align: justify;
 
-        p, ul, ol {
-            font-size: 150%;
+        padding: 80px;
+
+        h1, h2, h3 {
+            text-align: left;
             line-height: 1.1em;
-            margin: 10px 0 20px;
+        }
+
+        h1 {
+            padding-bottom: 20px;
+            border-bottom: 1px dotted #ddd;
+            margin-bottom: 80px;
+        }
+
+        p, ul, ol {
+            font-size: 20px;
+            line-height: 1.2em;
+            margin: 30px 0;
         }
 
         .img-legend {
-            font-size: 90%;
+            font-size: 14px;
             text-align: center;
             margin: 0 50px;
         }
@@ -275,28 +315,9 @@ header {
         ul li, ol li {
             margin: 5px 0 10px;
 
-            p {
-                /* Sometimes we find a <p> inside a <li>
-                   http://lil.1flow.io/admin/models/article/523014d3b49d88065d17191e/ */
-                font-size: 100%;
-            }
-
-            a {
-                font-size: 100%;
-            }
-
             ul, ol {
                 margin-left: 30px;
-                font-size: 100%;
-
-                li {
-                }
             }
-        }
-
-        h1, h2, h3 {
-            text-align: left;
-            line-height: 1.1em;
         }
 
         img {
@@ -311,12 +332,6 @@ header {
         margin-bottom: 0;
     }
 
-    .action-star {
-        text-align: right;
-        /* Cancel .actions right padding, we are on the left. */
-        padding-right: 0;
-    }
-
     .list-item-number {
         font-size: 500%;
         line-height: 100%;
@@ -325,8 +340,9 @@ header {
     }
 
     .heading {
-        line-height: 20px;
-        font-size: 150%;
+        font-size: 18px;
+        max-height: 25px;
+        line-height: 25px;
         cursor: pointer;
     }
 
